@@ -4,6 +4,7 @@ import core.AbstractGameState;
 import core.components.PartialObservableDeck;
 import core.interfaces.IComponentContainer;
 import games.loveletter.LoveLetterGameState;
+import games.loveletter.cards.CardType;
 import games.loveletter.cards.LoveLetterCard;
 import players.heuristics.AbstractStateFeature;
 
@@ -12,8 +13,8 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.stream.IntStream;
 
-import static games.loveletter.cards.LoveLetterCard.CardType.Guard;
-import static games.loveletter.cards.LoveLetterCard.CardType.getMaxCardValue;
+import static games.loveletter.cards.CardType.Guard;
+import static games.loveletter.cards.CardType.getMaxCardValue;
 import static java.util.stream.Collectors.toList;
 import static utilities.Utils.enumNames;
 
@@ -25,13 +26,13 @@ public class LLStateFeatures extends AbstractStateFeature {
     public LLStateFeatures() {
         List<String> allNames = new ArrayList<>(Arrays.asList("PROTECTED", "HIDDEN", "CARDS", "DRAW_DECK"));
         // For each card type, do we have one in hand
-        allNames.addAll(enumNames(LoveLetterCard.CardType.class).stream().map(s -> s + "_HAND").collect(toList()));
+        allNames.addAll(enumNames(CardType.class).stream().map(s -> s + "_HAND").toList());
         // Card is in Hand and is also Known to at least one other player
-        allNames.addAll(enumNames(LoveLetterCard.CardType.class).stream().map(s -> s + "_KNOWN").collect(toList()));
+        allNames.addAll(enumNames(CardType.class).stream().map(s -> s + "_KNOWN").toList());
         // Percentage of card type in Discard
-        allNames.addAll(enumNames(LoveLetterCard.CardType.class).stream().map(s -> s + "_DISCARD").collect(toList()));
+        allNames.addAll(enumNames(CardType.class).stream().map(s -> s + "_DISCARD").toList());
         // Card is known to be in hand of another player
-        allNames.addAll(enumNames(LoveLetterCard.CardType.class).stream().map(s -> s + "_OTHER").collect(toList()));
+        allNames.addAll(enumNames(CardType.class).stream().map(s -> s + "_OTHER").toList());
         localNames = allNames.toArray(new String[0]);
     }
 
@@ -55,7 +56,7 @@ public class LLStateFeatures extends AbstractStateFeature {
         LoveLetterGameState state = (LoveLetterGameState) gs;
 
         double[] retValue = new double[localNames.length];
-        int featuresPerGroup = LoveLetterCard.CardType.values().length;
+        int featuresPerGroup = CardType.values().length;
 
         double cardValues = 0;
         PartialObservableDeck<LoveLetterCard> hand = state.getPlayerHandCards().get(playerID);
@@ -75,8 +76,6 @@ public class LLStateFeatures extends AbstractStateFeature {
             }
         }
 
-   //     double maxCardValue = 1 + state.getPlayerHandCards().get(playerID).getSize() * getMaxCardValue();
-
         int visibleCards = 0;
         for (int player = 0; player < state.getNPlayers(); player++) {
             if (player != playerID) {
@@ -92,19 +91,15 @@ public class LLStateFeatures extends AbstractStateFeature {
         }
         List<LoveLetterCard> discardDecks = state.getPlayerDiscardCards().stream()
                 .flatMap(IComponentContainer::stream)
-                .collect(toList());
+                .toList();
         for (LoveLetterCard discard : discardDecks) {
             retValue[baseFeatures + 2 * featuresPerGroup + discard.cardType.ordinal()] += 1.0;
         }
-        // divide by total cards
-  //      retValue[baseFeatures + 2 * featuresPerGroup] /= 5.0;  // 5 Guard cards
-   //     for (int i = 1; i < featuresPerGroup; i++)
-   //         retValue[baseFeatures + 2 * featuresPerGroup + i] /= 2.0;  // 2 of all other types
 
         retValue[0] = state.isProtected(playerID) ? 1.0 : 0.0;
         retValue[1] = visibleCards / (state.getNPlayers() - 1.0);
-        retValue[2] = cardValues; // / maxCardValue;
-        retValue[3] = state.getDrawPile().getSize() ; // / 16.0;
+        retValue[2] = cardValues;
+        retValue[3] = state.getDrawPile().getSize() ;
 
         return retValue;
     }
