@@ -2,6 +2,7 @@ package players.mcts;
 
 import core.*;
 import core.actions.AbstractAction;
+import core.actions.DoNothing;
 import core.interfaces.IActionHeuristic;
 import players.PlayerConstants;
 import utilities.*;
@@ -16,6 +17,7 @@ import static players.mcts.MCTSEnums.Information.Closed_Loop;
 import static players.mcts.MCTSEnums.OpponentTreePolicy.*;
 import static players.mcts.MCTSEnums.RolloutTermination.DEFAULT;
 import static players.mcts.MCTSEnums.SelectionPolicy.*;
+import static players.mcts.MCTSEnums.TreePolicy.*;
 import static utilities.Utils.*;
 
 public class SingleTreeNode {
@@ -50,12 +52,14 @@ public class SingleTreeNode {
     protected int depth;
     // the id of the player who makes the decision at this node
     protected int decisionPlayer;
+    protected int redeterminisationPlayer = -1;
     protected int round, turn, turnOwner;
     boolean terminalNode;
     double timeTaken;
     double initialisationTimeTaken;
     protected double highReward = Double.NEGATIVE_INFINITY;
     protected double lowReward = Double.POSITIVE_INFINITY;
+    protected Map<AbstractAction, Double> regretMatchingAverage = new HashMap<>();
     protected int nodeClash;
     // Root node of tree
     protected SingleTreeNode root;
@@ -71,6 +75,7 @@ public class SingleTreeNode {
     // The total value of all trajectories through this node (one element per player)
     private Supplier<? extends SingleTreeNode> factory;
     // Total value of this node
+    protected List<SingleTreeNode> currentNodeTrajectory;
     protected List<Pair<Integer, AbstractAction>> actionsInTree;
     List<Pair<Integer, AbstractAction>> actionsInRollout;
 
@@ -102,13 +107,25 @@ public class SingleTreeNode {
         return retValue;
     }
 
-    protected void instantiate(SingleTreeNode parent, AbstractAction actionToReach, AbstractGameState state) {
+    protected void instantiate(SingleTreeNode parent, AbstractAction actionToReach, AbstractGameState rootState) {
         this.fmCallsCount = 0;
         this.parent = parent;
         this.root = parent == null ? this : parent.root;
         this.params = root.params;
         this.forwardModel = root.forwardModel;
         this.rnd = root.rnd;
+
+        if (params.information != Closed_Loop && (params.maintainMasterState || depth == 0)) {
+            // if we're using open loop, then we need to make sure the reference state is never changed
+            // however this is only used at the root - and we can switch the copy off for other nodes for performance
+            // these master copies *are* required if we want to do something funky with the final tree, and gather
+            // features from the nodes - if we are gathering Expert Iteration data or Learning an Advantage function
+            root.copyCount++;
+            this.state = rootState.copy();
+        } else {
+            this.state = rootState;
+        }
+
         this.round = state.getRoundCounter();
         this.turn = state.getTurnCounter();
         this.turnOwner = state.getCurrentPlayer();
@@ -120,34 +137,28 @@ public class SingleTreeNode {
             depth = parent.depth + 1;
             factory = parent.factory;
             decisionPlayer = terminalStateInSelfOnlyTree(state) ? parent.decisionPlayer : state.getCurrentPlayer();
-        } else {
-            depth = 0;
+        } else { // this is the root node (possibly reused from previous tree)
+            resetDepth(this);
             decisionPlayer = state.getCurrentPlayer();
         }
 
-        if (params.information != Closed_Loop && (params.maintainMasterState || depth == 0)) {
-            // if we're using open loop, then we need to make sure the reference state is never changed
-            // however this is only used at the root - and we can switch the copy off for other nodes for performance
-            // these master copies *are* required if we want to do something funky with the final tree, and gather
-            // features from the nodes - if we are gathering Expert Iteration data or Learning an Advantage function
-            root.copyCount++;
-            this.state = state.copy();
-        } else {
-            this.state = state;
-        }
-        // then set up available actions, and set openLoopState = state
-        setActionsFromOpenLoopState(state);
+        // then set up available actions, and set openLoopState
+        setActionsFromOpenLoopState(rootState);
 
     }
 
-    public void rootify(SingleTreeNode template) {
+    public void rootify(SingleTreeNode template, AbstractGameState newState) {
         // now we need to reset the depth on all the children (recursively)
+        if (newState != null)
+            instantiate(null, null, newState);
         parent = null;
         actionToReach = null;
-        resetDepth(this);
         highReward = template.highReward;
         lowReward = template.lowReward;
         inheritedVisits = nVisits;
+        MASTStatistics = new ArrayList<>();
+        for (int i = 0; i < template.MASTStatistics.size(); i++)
+            MASTStatistics.add(new HashMap<>());
     }
 
     protected void resetDepth(SingleTreeNode newRoot) {
@@ -173,7 +184,7 @@ public class SingleTreeNode {
     }
 
     /**
-     * This is a pretty key method. It is called when the tree search 'moves' to this node.
+     * This is a key method. It is called when the tree search 'moves' to this node.
      * Because we are using Open Loop search, we need to make sure that the state is updated to reflect the
      * state in the current trajectory; each visit to the node may have a different underlying state, and it's
      * perfectly possible for different actions to be available on different visits.
@@ -211,7 +222,7 @@ public class SingleTreeNode {
                         // we just initialise the new actions
                         for (AbstractAction action : actionsFromOpenLoopState) {
                             if (!actionValueEstimates.containsKey(action)) {
-                                actionValueEstimates.put(action, params.actionHeuristic.evaluateAction(action, actionState));
+                                actionValueEstimates.put(action, params.actionHeuristic.evaluateAction(action, actionState, actionsFromOpenLoopState));
                             }
                         }
                     }
@@ -231,13 +242,13 @@ public class SingleTreeNode {
                     // in this case we construct a Boltzmann
                     double[] actionValues = actionsFromOpenLoopState.stream().
                             mapToDouble(a -> actionValueEstimates.getOrDefault(a, 0.0)).toArray();
-                    pdf = Utils.pdf(Utils.exponentiatePotentials(actionValues, params.pUCTTemperature));
+                    pdf = pdf(exponentiatePotentials(actionValues, params.pUCTTemperature));
 
                 } else {
                     // in this case, we first set any negative values to zero, and then construct the pdf directly
                     double[] actionValues = actionsFromOpenLoopState.stream().
                             mapToDouble(a -> Math.max(0.0, actionValueEstimates.getOrDefault(a, 0.0))).toArray();
-                    pdf = Utils.pdf(actionValues);
+                    pdf = pdf(actionValues);
                 }
                 for (int i = 0; i < actionsFromOpenLoopState.size(); i++) {
                     actionPDFEstimates.put(actionsFromOpenLoopState.get(i), pdf[i]);
@@ -279,6 +290,7 @@ public class SingleTreeNode {
             }
         } else if (!params.opponentTreePolicy.selfOnlyTree) {
             throw new AssertionError("Expected?");
+            // How have we got to a state in which the decision player is not the active player?
         }
     }
 
@@ -287,6 +299,7 @@ public class SingleTreeNode {
         initialisationTimeTaken = 0.0;
         nodeClash = 0;
         rolloutActionsTaken = 0;
+        regretMatchingAverage.clear();
     }
 
     /**
@@ -317,7 +330,9 @@ public class SingleTreeNode {
                     copyCount++;
                     break;
                 case Information_Set:
-                    setActionsFromOpenLoopState(state.copy(decisionPlayer));
+                    if (redeterminisationPlayer == -1)
+                        redeterminisationPlayer = decisionPlayer;
+                    setActionsFromOpenLoopState(state.copy(redeterminisationPlayer));
                     copyCount++;
                     break;
             }
@@ -361,6 +376,7 @@ public class SingleTreeNode {
      */
     protected void oneSearchIteration() {
         actionsInTree = new ArrayList<>();
+        currentNodeTrajectory = new ArrayList<>();
         actionsInRollout = new ArrayList<>();
 
         SingleTreeNode selected = treePolicy();
@@ -474,6 +490,8 @@ public class SingleTreeNode {
             } else {
                 cur.advanceState(cur.openLoopState, chosen, false);
             }
+            // add node to trajectory for later backprop
+            currentNodeTrajectory.add(cur);
             // then find out where this has taken us
             boolean terminal = !cur.openLoopState.isNotTerminal() ||
                     (params.opponentTreePolicy.selfOnlyTree && !cur.openLoopState.isNotTerminalForPlayer(decisionPlayer));
@@ -581,7 +599,7 @@ public class SingleTreeNode {
      * @return - child node according to the tree policy
      */
     protected AbstractAction treePolicyAction(boolean explore) {
-        if (params.opponentTreePolicy == SelfOnly && openLoopState != null && openLoopState.getCurrentPlayer() != decisionPlayer)
+        if (params.opponentTreePolicy == SelfOnly && parent != null && openLoopState != null && openLoopState.getCurrentPlayer() != decisionPlayer)
             throw new AssertionError("An error has occurred. SelfOnly should only call uct when we are moving.");
 
         // actionsToConsider takes care of any Progressive Widening in play, so we only consider the
@@ -600,12 +618,27 @@ public class SingleTreeNode {
             double[] actionValues = actionValues(availableActions);
             // then pick the best one
             actionChosen = switch (params.treePolicy) {
+                case Uniform -> availableActions.get(rnd.nextInt(availableActions.size()));
+                case Greedy -> {
+                    // check exploration first
+                    if (explore && rnd.nextDouble() < params.exploreEpsilon) {
+                        yield availableActions.get(rnd.nextInt(availableActions.size()));
+                    }
+                    AbstractAction bestAction = null;
+                    double bestValue = -Double.MAX_VALUE;
+                    for (int i = 0; i < availableActions.size(); i++) {
+                        if (actionValues[i] > bestValue) {
+                            bestValue = actionValues[i];
+                            bestAction = availableActions.get(i);
+                        }
+                    }
+                    yield bestAction;
+                }
                 case UCB, AlphaGo, UCB_Tuned -> {
                     // These take the max
                     // Find child with highest UCB value
                     AbstractAction bestAction = null;
                     double bestValue = -Double.MAX_VALUE;
-                    // no need to shuffle, as ucbValue() adds some random noise
                     for (AbstractAction availableAction : availableActions) {
                         double uctValue = ucbValue(availableAction);
                         if (uctValue > bestValue) {
@@ -615,18 +648,18 @@ public class SingleTreeNode {
                     }
                     yield bestAction;
                 }
-                case RegretMatching, EXP3, Hedge -> {
+                case RegretMatching, EXP3 -> {
                     // check exploration first
                     if (explore && rnd.nextDouble() < params.exploreEpsilon) {
                         yield availableActions.get(rnd.nextInt(availableActions.size()));
                     }
-                    double[] pdf = Utils.pdf(actionValues);
+                    double[] pdf = pdf(actionValues);
                     long nonZeroActions = Arrays.stream(actionValues).filter(v -> v > 0.0).count();
                     if (nonZeroActions == 0) {
                         // if we have no non-zero values, then we just pick one at random
                         yield availableActions.get(rnd.nextInt(availableActions.size()));
                     }
-                    yield availableActions.get(Utils.sampleFrom(pdf, rnd.nextDouble()));
+                    yield availableActions.get(sampleFrom(pdf, rnd.nextDouble()));
                 }
                 default -> throw new AssertionError("Unknown treePolicy: " + params.treePolicy);
             };
@@ -673,29 +706,32 @@ public class SingleTreeNode {
         for (int i = 0; i < actionsToConsider.size(); i++) {
             AbstractAction action = actionsToConsider.get(i);
             retValue[i] = switch (params.treePolicy) {
+                case Uniform -> 1.0;
+                case Greedy -> getFullValue(action);
                 case UCB, AlphaGo, UCB_Tuned -> ucbValue(action);
-                case RegretMatching, Hedge -> rmValue(action);
+                case RegretMatching -> rmValue(action);
                 case EXP3 -> exp3Value(action);
             };
         }
         return retValue;
     }
 
-    private double ucbValue(AbstractAction action) {
-
-        // Find 'UCB' value
-        double uctValue = 0;
+    private double getFullValue(AbstractAction action) {
+        double value = getActionValue(action);
         int actionVisits = actionVisits(action);
-        // Find child value
-        double childValue = getActionValue(action);
-
         if (params.normaliseRewards && actionVisits > 0) {
-            childValue = normalise(childValue, root.lowReward, root.highReward);
+            value = normalise(value, root.lowReward, root.highReward);
         }
         if (params.progressiveBias > 0)
-            childValue += getBiasValue(action);
+            value += getBiasValue(action);
+        // apply OMA
+        value = getOMAValue(action, value);
+        return value;
+    }
 
-
+    private double getOMAValue(AbstractAction action, double childValue) {
+        int actionVisits = actionVisits(action);
+        double retValue = childValue;
         // consider OMA term
         if (params.omaVisits > 0 && (params.opponentTreePolicy == OMA_All || params.opponentTreePolicy == OMA)) {
             OMATreeNode oma = ((OMATreeNode) this).OMAParent.orElse(null);
@@ -722,16 +758,27 @@ public class SingleTreeNode {
                     OMATreeNode.OMAStats stats = tmp.get(action);
                     if (stats != null && stats.OMAVisits > 0) {
                         double omaValue = stats.OMATotValue / stats.OMAVisits;
-                        childValue = (1.0 - beta) * childValue + beta * omaValue;
+                        retValue = (1.0 - beta) * childValue + beta * omaValue;
                     }
                 }
             }
         }
+        return retValue;
+    }
 
+    private double ucbValue(AbstractAction action) {
+
+        // Find 'UCB' value - this is the base to which we then add exploration
+        double childValue = getFullValue(action);
+        int actionVisits = actionVisits(action);
+
+        // Now for the exploration term
         // default to standard UCB
         int effectiveTotalVisits = validVisitsFor(action);
         // use first play urgency as replacement for exploration term if action not previously taken
-        double explorationTerm = params.firstPlayUrgency;
+        // we add in the second term based on the AlphaGo selection rule, so that the exploration term is monotonically increasing with N
+        // this will come into play for small values of FPU and acts as soft-pruning rather than the harder form if FPU is a fixed constant
+        double explorationTerm = Math.max(params.firstPlayUrgency, params.K * Math.sqrt(effectiveTotalVisits));
         if (actionVisits > 0) {
             explorationTerm = switch (params.treePolicy) {
                 case UCB_Tuned -> {
@@ -765,7 +812,7 @@ public class SingleTreeNode {
 
         // Paranoid/SelfOnly control determines childValue here
         // If we are Paranoid, then the back-propagation will ensure that childValue is minus our score for opponent nodes
-        uctValue = childValue + explorationTerm;
+        double uctValue = childValue + explorationTerm;
         if (Double.isNaN(uctValue))
             throw new AssertionError("Numeric error calculating uctValue");
 
@@ -780,16 +827,18 @@ public class SingleTreeNode {
         int actionVisits = actionVisits(action);
         // we then normalise to [0, 1], or we subtract the mean action value to get an advantage (and reduce risk of
         // NaN or Infinities when we exponentiate)
-        if (params.normaliseRewards && actionVisits > 0)
-            actionValue = normalise(actionValue, root.lowReward, root.highReward);
-        else
-            actionValue = actionValue - nodeValue(decisionPlayer);
+        if (actionVisits > 0) {
+            if (params.normaliseRewards)
+                actionValue = normalise(actionValue, root.lowReward, root.highReward);
+            else
+                actionValue = actionValue - nodeValue(decisionPlayer);
+        }
         if (params.progressiveBias > 0)
             actionValue += getBiasValue(action);
         double retValue = Math.exp(actionValue / params.exp3Boltzmann);
 
         if (Double.isNaN(retValue) || Double.isInfinite(retValue)) {
-            System.out.println("We have a non-number in EXP3 somewhere : " + retValue);
+            System.out.printf("We have a non-number %s in EXP3 (from %.0f) somewhere from %s %n", retValue, actionValue, action);
             retValue = 1e6;  // to avoid numeric issues later
         }
         // We add FPU after exponentiation for safety (as it likely a large number)
@@ -807,14 +856,6 @@ public class SingleTreeNode {
         // potential value is our estimate of our accumulated reward if we had always taken this action
         double potentialValue = actionValue * nVisits;
         double regret = potentialValue - nodeValue * nVisits;
-        if (params.treePolicy == MCTSEnums.TreePolicy.Hedge) {
-            // in this case we exponentiate the regret to get the probability of taking this action
-            // This may be problematic for large regrets, as it is not standardised to number of actions
-            // So the Boltzmann factor needs to be quite large
-            regret = Math.exp(regret / params.hedgeBoltzmann);
-            if (Double.isNaN(regret))
-                throw new AssertionError("We have a non-number in Hedge somewhere");
-        }
         // We add FPU after all the exponentiation for safety
         int actionVisits = actionVisits(action);
         if (actionVisits == 0) {
@@ -834,12 +875,6 @@ public class SingleTreeNode {
         int actionVisits = actionVisits(action);
         return params.progressiveBias * actionValueEstimates.getOrDefault(action, 0.0) / (actionVisits + 1);
     }
-
-    private int sampleFromPotentials(double[] values) {
-        // then we need
-        return Utils.sampleFrom(values, rnd.nextDouble());
-    }
-
 
     /**
      * Perform a Monte Carlo rollout from this node.
@@ -880,8 +915,8 @@ public class SingleTreeNode {
 
         for (int i = 0; i < retValue.length; i++) {
             retValue[i] = params.heuristic.evaluateState(rolloutState, i);
-            if (Double.isNaN(retValue[i]))
-                throw new AssertionError("Illegal heuristic value - should be a number");
+            if (Double.isNaN(retValue[i]) || Double.isInfinite(retValue[i]))
+                throw new AssertionError("Illegal heuristic value - should be a number - " + params.heuristic.toString());
         }
         return retValue;
     }
@@ -917,34 +952,29 @@ public class SingleTreeNode {
     protected void backUp(double[] delta) {
         normaliseRewardsAfterIteration(delta);
         double[] result = processResultsForParanoidOrSelfOnly(delta);
-        // we also need the action taken at each step which we should be able to get from actionsInTree...
-        SingleTreeNode n = root;
-        for (int i = 0; i < root.actionsInTree.size(); i++) {
+        // we need to go backwards up the tree, as the result may change
+        for (int i = root.currentNodeTrajectory.size() - 1; i >= 0; i--) {
             int actingPlayer = root.actionsInTree.get(i).a;
             AbstractAction action = root.actionsInTree.get(i).b;
+            SingleTreeNode n = root.currentNodeTrajectory.get(i);
             if (n.decisionPlayer != actingPlayer)
                 throw new AssertionError("We have a mismatch between the player who took the action and the player who should be acting");
-            n.backUpSingleNode(action, result);
-            if (i < root.actionsInTree.size() - 1) {
-                int nextPlayer = root.actionsInTree.get(i + 1).a;
-                SingleTreeNode[] nextN = n.children.get(action);
-                if (nextN == null)
-                    throw new AssertionError("We have somehow failed to find the next node in the tree");
-                n = nextN[nextPlayer];
-            }
+            result = n.backUpSingleNode(action, result);
         }
     }
 
     protected void normaliseRewardsAfterIteration(double[] result) {
         // after each iteration we update the min and max rewards seen, to be used in future iterations.
         // These are only stored on the root
-        if (params.normaliseRewards || params.treePolicy == MCTSEnums.TreePolicy.UCB_Tuned) {
+        if (params.normaliseRewards || params.treePolicy == UCB_Tuned) {
             DoubleSummaryStatistics stats = Arrays.stream(result).summaryStatistics();
             if (root.lowReward > stats.getMin())
                 root.lowReward = stats.getMin();
             if (root.highReward < stats.getMax())
                 root.highReward = stats.getMax();
         }
+        if (root.lowReward == Double.NEGATIVE_INFINITY || root.highReward == Double.POSITIVE_INFINITY)
+            throw new AssertionError("We have somehow failed to update the min or max rewards");
     }
 
     protected double[] processResultsForParanoidOrSelfOnly(double[] result) {
@@ -973,7 +1003,13 @@ public class SingleTreeNode {
         return retValue;
     }
 
-    protected void backUpSingleNode(AbstractAction actionTaken, double[] result) {
+    /**
+     * This take in the result coming from the child node, and updates the statistics for the action taken
+     * It returns the reward that should be back-propagated to the parent node.
+     * In the case of vanilla MCTS, this is unchanged from the input result.
+     * But, if we are interpolating some max/Q update, then this will change the result.
+     */
+    protected double[] backUpSingleNode(AbstractAction actionTaken, double[] result) {
         if (params.discardStateAfterEachIteration) {
             if (depth > 0)
                 openLoopState = null; // releases for Garbage Collection
@@ -1008,7 +1044,78 @@ public class SingleTreeNode {
             throw new AssertionError("We have somehow failed to find the action taken in the list of actions");
         if (stats.validVisits == 0)
             throw new AssertionError("We have somehow failed to find the action taken in the list of valid actions");
+
         stats.update(result);
+
+        if (params.treePolicy == RegretMatching && nVisits >= actionsToConsider.size() && nVisits % Math.max(actionsToConsider.size(), 10) == 0) {
+            // we update the average policy each time we have had the opportunity to take each action once (or every 10 visits, if that is greater)
+            updateRegretMatchingAverage(actionsToConsider);
+        }
+
+        if (params.backupPolicy == MCTSEnums.BackupPolicy.MonteCarlo)
+            return result;
+
+        // otherwise we do some more complex backup
+        double resultToPropagateUpwards[] = result.clone();
+        AbstractAction bestAction = bestAction(actionsToConsider);
+        double[] maxValue = actionValues.get(bestAction).totValue.clone();
+        for (int i = 0; i < maxValue.length; i++) {
+            maxValue[i] /= actionValues.get(bestAction).nVisits;
+        }
+        return switch (params.backupPolicy) {
+            case MonteCarlo:
+                yield result;
+            case Lambda:
+                // SARSA-style on-policy update. We weight the action average by 1 - lambda
+                for (int i = 0; i < result.length; i++) {
+                    resultToPropagateUpwards[i] = params.backupLambda * result[i] + (1.0 - params.backupLambda) * stats.totValue[i] / stats.nVisits;
+                }
+                yield resultToPropagateUpwards;
+            case MaxLambda:
+                // SARSA-style off-policy update.
+                for (int i = 0; i < result.length; i++) {
+                    resultToPropagateUpwards[i] = params.backupLambda * result[i] + (1.0 - params.backupLambda) * maxValue[i];
+                }
+                yield resultToPropagateUpwards;
+            case MaxMC:
+                if (nVisits > params.maxBackupThreshold) {
+                    // in this case we mix in a max backup
+                    // *if* we took an action other than the one with the current best estimate
+                    if (bestAction == null) {
+                        // this can happen for low maxBackupCounts with no actions available
+                        // we default to ignoring Max functionality
+                        bestAction = actionTaken;
+                    }
+                    if (!bestAction.equals(actionTaken)) {
+                        double maxWeight = (nVisits - params.maxBackupThreshold) / (double) nVisits;
+                        // we mix for all players, based on the counterfactual decision of the acting player
+                        for (int i = 0; i < result.length; i++) {
+                            resultToPropagateUpwards[i] = (1 - maxWeight) * result[i] + maxWeight * maxValue[i];
+                        }
+                    }
+                    yield resultToPropagateUpwards;
+                } else {
+                    yield result;
+                }
+        };
+
+    }
+
+    public AbstractAction bestAction(List<AbstractAction> actionsToConsider) {
+        AbstractAction bestAction = null;
+        double maxValue = -Double.MAX_VALUE;
+        for (AbstractAction action : actionsToConsider) {
+            ActionStats temp = actionValues.get(action);
+            double value = temp.nVisits == 0 ? -Double.MAX_VALUE :
+                    temp.totValue[decisionPlayer] / temp.nVisits;
+            if (value > maxValue) {
+                maxValue = value;
+                bestAction = action;
+            }
+        }
+        if (bestAction == null)
+            return actionsToConsider.get(rnd.nextInt(actionsToConsider.size()));
+        return bestAction;
     }
 
 
@@ -1041,15 +1148,27 @@ public class SingleTreeNode {
                 Arrays.stream(actionVisits()).boxed().collect(toSet()).size() == 1) {
             policy = SIMPLE;
         }
-        if (params.selectionPolicy == TREE) {
-            // the check on unexpanded actions is to catch the rare case that we have not explored all actions at the root
-            // this can then lead to problems as treePolicyAction assumes it is only called on a completely expanded node
-            // (and this is good, as it throws an error as a bug-check if this is not true).
+        if (params.treePolicy == EXP3) {
+            // EXP3 uses the tree policy (without exploration)
             bestAction = treePolicyAction(false);
+        } else if (params.treePolicy == RegretMatching) {
+            // RM uses a special policy as the average of all previous root policies
+            if (regretMatchingAverage.isEmpty())  // in case we have a very low number of visits
+                updateRegretMatchingAverage(actionsToConsider(actionsFromOpenLoopState));
+            bestAction = regretMatchingAverage();
         } else {
             // We iterate through all actions valid in the original root state
-            // as openLoopState may be different if using MCGS (not an issue with SingleTreeNode or MultiTreeNode)
-            for (AbstractAction action : forwardModel.computeAvailableActions(state, params.actionSpace)) {
+            // as openLoopState is fine with SingleTreeNode or MultiTreeNode
+            List<AbstractAction> availableActions = actionsToConsider(actionsFromOpenLoopState);
+            if (state != null && (
+                    (redeterminisationPlayer != -1 && redeterminisationPlayer != decisionPlayer)
+                            || params.opponentTreePolicy == MCGS
+                            || params.opponentTreePolicy == MCGSSelfOnly)) {
+                // In these cases we need to recompute the available actions from the root state to ensure that
+                // we only consider the ones that are valid in the caller (in MCGS case it is possible that we have a loop round to the root)
+                availableActions = actionsToConsider(forwardModel.computeAvailableActions(state, params.actionSpace));
+            }
+            for (AbstractAction action : availableActions) {
                 if (!actionValues.containsKey(action)) {
                     throw new AssertionError("Hashcode / equals contract issue for " + action);
                 }
@@ -1072,7 +1191,7 @@ public class SingleTreeNode {
         }
 
         if (bestAction == null) {
-            if (nVisits == 1) {
+            if (nVisits < 2) {
 //                System.out.println("Only one visit to root node - insufficient information - hopefully due to JVM warming up");
                 bestAction = actionValues.keySet().stream().findFirst().orElseThrow(() -> new AssertionError("No children"));
             } else
@@ -1082,12 +1201,40 @@ public class SingleTreeNode {
         return bestAction;
     }
 
+    protected void updateRegretMatchingAverage(List<AbstractAction> actionsToConsider) {
+        double[] av = actionValues(actionsToConsider);
+        double[] pdf = pdf(av);
+        for (int i = 0; i < actionsToConsider.size(); i++) {
+            regretMatchingAverage.merge(actionsToConsider.get(i), pdf[i], Double::sum);
+        }
+    }
+
+    protected AbstractAction regretMatchingAverage() {
+        double[] potentials = new double[regretMatchingAverage.size()];
+        int count = 0;
+        for (AbstractAction action : regretMatchingAverage.keySet()) {
+            if (actionsFromOpenLoopState.contains(action)) {
+                potentials[count] = regretMatchingAverage.get(action);
+            } else {
+                potentials[count] = 0.0;
+            }
+            count++;
+        }
+        double[] pdf = pdf(potentials);
+        int index = sampleFrom(pdf, rnd.nextDouble());
+        return regretMatchingAverage.keySet().stream().skip(index).findFirst().orElseThrow(() -> new AssertionError("No action found"));
+    }
+
     public int getVisits() {
         return nVisits;
     }
 
     public int getDepth() {
         return depth;
+    }
+
+    public void setRedeterminisationPlayer(int player) {
+        redeterminisationPlayer = player;
     }
 
     public Map<AbstractAction, SingleTreeNode[]> getChildren() {
@@ -1179,7 +1326,7 @@ public class SingleTreeNode {
         List<AbstractAction> sortedActions = actionValues.keySet().stream()
                 .filter(Objects::nonNull)
                 .sorted(Comparator.comparingInt(a -> -actionVisits(a)))
-                .collect(toList());
+                .toList();
 
         for (AbstractAction action : sortedActions) {
             String actionName = action.toString();
@@ -1189,7 +1336,8 @@ public class SingleTreeNode {
                 actionName = actionName.substring(0, 50);
             valueString = String.format("%.2f", actionTotValue(action, decisionPlayer) / actionVisits);
             if (params.opponentTreePolicy == OneTree) {
-                valueString = IntStream.range(0, openLoopState.getNPlayers())
+                int players = state == null ? children.get(action).length : state.getNPlayers();
+                valueString = IntStream.range(0, players)
                         .mapToObj(p -> String.format("%.2f", actionTotValue(action, p) / actionVisits))
                         .collect(joining(", "));
             }
